More formatting; Show Ready on form when ready

--- a/ship_template.html
+++ b/ship_template.html
@@ -35,6 +35,6 @@
     </form>
     <h4>Output</h4>
     <p>Copy and paste this into the wiki page.</p>
-    <textarea rows="100" cols="80"></textarea>
+    <textarea id="js-content" rows="40" cols="80"></textarea>
     </body>
 </html>
