Added a field to override the image (since sometimes I use a png)

--- a/ship_template.html
+++ b/ship_template.html
@@ -20,6 +20,7 @@
         <h4>Overrides</h4>
         <p>Many of the fields on the wiki are not available from the game data. For these fields, passing one of the options below will override the default.</p>
         <table>
+            <tr><td>Ship Image</td><td><input id="js-shipimg-input" type="text" size="80"/></td><td></td></tr>
             <tr><td>Roles</td><td><input id="js-roles-input" type="text" size="80"/></td><td></td></tr>
             <tr><td>Faction</td><td><input id="js-faction-input" type="text" size="80"/></td><td><small>This should be overridden for non-empire ships</small></tr>
             <tr><td>ECM Priority</td><td><input id="js-ecmprio-input" type="text" size="80"/></td><td><small>0 = none, 1 = low, 2 = normal, 3 = high, 4 = highest</small></td></tr>
